--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.555.0",
     "next": "^16.0.8",
+    "photoswipe": "^5.4.4",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "react-scroll": "^1.9.3",
     "swiper": "^12.0.3",
     "tailwind-merge": "^3.4.0"
   },
